# Calling-AGENT

./: .env.example  .gitignore  PROJECT_STATE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  check_settings_words.py  client.py  config.py  main.py  rest_launcher (1).py  route_b_running_words.py  slurm_launcher.py  standalone_launcher (1).py  test_rest.py  wiki_index_vocab.py
app/api/v1/: agents.py  auth.py  calls.py  campaigns.py  dashboard.py  exports.py  health.py  tenants.py  webhooks.py
app/core/: exceptions.py  security.py
app/db/: session.py
app/db/repositories/: agent_repo.py  call_repo.py  tenant_repo.py
app/middleware/: auth.py
app/models/: __init__.py  agent.py  base.py  call.py  campaign.py  tenant.py  user.py
app/schemas/: __init__.py
app/services/: billing.py  compliance.py  recording.py
app/tasks/: __init__.py  call_tasks.py
app/utils/: resilience.py
app/voice/: pipeline.py  session_manager.py
app/voice/handlers/: media_stream.py
app/voice/prompts/: __init__.py
app/voice/providers/: base.py
app/voice/providers/llm/: anthropic_provider.py  openai_provider.py
app/voice/providers/stt/: deepgram_provider.py
app/voice/providers/telephony/: plivo_provider.py  twilio_provider.py
app/voice/providers/tts/: cartesia_provider.py  elevenlabs_provider.py
docker/: Dockerfile  prometheus.yml
scripts/: seed.py
tests/integration/: test_webhooks.py
tests/unit/: test_pipeline.py  test_security.py
