# # Python dependencies & project metadata
# # Contains: FastAPI, SQLAlchemy, Deepgram SDK, OpenAI SDK, Cartesia SDK,
# # Twilio SDK, Plivo SDK, Celery, Redis, Prometheus, OpenTelemetry
# # Also: dev dependencies (pytest, ruff, mypy)


[project]
name = "voice-agent-platform"
version = "0.1.0"
description = "Production-ready AI Voice Calling Agent SaaS Platform"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "uvloop>=0.21.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Celery
    "celery[redis]>=5.4.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Telephony
    "twilio>=9.4.0",
    "plivo>=4.60.0",
    # Voice AI providers
    "deepgram-sdk>=3.8.0",
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "cartesia>=1.3.0",
    "elevenlabs>=1.15.0",
    # Voice pipeline
    "pipecat-ai[daily,deepgram,openai,cartesia]>=0.0.52",
    # Audio processing
    "audioop-lts>=0.2.1",
    "numpy>=1.26.0",
    # HTTP client
    "httpx>=0.28.0",
    # Utilities
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
    # Object storage
    "boto3>=1.35.0",
    # Monitoring
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-celery>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]